--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<body>
-		<h1>Welcome, nama!</h1>
+		<h1>Selamat Datang, {{ data['full_name'] }}!</h1>
 		<p>Kamu sudah berhasil login</p>
 	</body>
 </html>
